syntax = "proto3";

package memcache;
option go_package = "github.com/995933447/mconfigcenter/memcache";

import "easymicro_ext.proto";

option (easymicro_ext.proto_gen_opts) = {
  disabled_load_redis:true
  disabled_elect:true
  disabled_mgorm_redis_cache_conn:true
  grpc_schema:"memcache"
  discovery_name:"memcache"
};

enum ErrCode {
  ErrCodeNil = 0;
  ErrCodeParamInvalid = 2001;
  ErrCodeCtxKeyHashKeyNotFound = 2002;
}

service MemCache {
  // 获取缓存
  rpc Get(GetReq) returns (GetResp);

  // 设置缓存
  rpc Set(SetReq) returns (SetResp);

  // 删除缓存
  rpc Del(DelReq) returns (DelResp);
}

message GetReq {
  string key = 1;
}

message GetResp {
  string value = 1;
  bool ok = 2;
}

message SetReq {
  string key = 1;
  string value = 2;
}

message SetResp {

}

message DelReq {
  string key = 1;
}

message DelResp {

}